display the student exam details page

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -42,7 +42,7 @@
                                     </div>
                                 </div>
                                 <div class="d-flex justify-content-center">
-                                    <h3 class="chairmansNameMobile">Puneet Chandra <br> <span>Founder & CEO</span></h3>
+                                    <h3 class="chairmansNameMobile">Shantanu Kumar <br> <span>Founder & CEO</span></h3>
                                 </div>
                             </div>
                             <div class="col-md-8">
@@ -70,7 +70,7 @@
                                     their future), a parent(who want to provide the best resources to their child) or a
                                     mentor (who needs the right tools for their students) – you would love our platform.
                                 </p>
-                                <h3 class="chairmansNameDesktop">Puneet Chandra <br> <span>Founder & CEO</span></h3>
+                                <h3 class="chairmansNameDesktop">Shantanu Kumar <br> <span>Founder & CEO</span></h3>
                             </div>
                         </div>
                     </div>
