Work on student history report

--- a/src/app/exam/exam-details/exam-details.component.css
+++ b/src/app/exam/exam-details/exam-details.component.css
@@ -503,6 +503,9 @@
 }
 
 .selected-answer {
+  background-color: orange !important;
+}
+.selected-answer2 {
   background-color: rgb(238, 53, 53) !important;
 }
 .skipped-question{
