--- a/src/app/exam/quize-report/quize-report.component.html
+++ b/src/app/exam/quize-report/quize-report.component.html
@@ -7,6 +7,10 @@
             </div>
         </div>
         <h2 class="practiceReportHeading">Practice Report Card</h2>
+        <h5 style="display: inline-block;">Subjet- {{quiz_pool_name}}</h5> 
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <h5 style="display: inline-block;">Date- {{quize_date}}</h5>
         <div>
             <hr>
         </div>
