--- a/src/app/exam/report/report.component.html
+++ b/src/app/exam/report/report.component.html
@@ -123,7 +123,7 @@
                         </div>
                         <div class="col-xl-4 col-lg-12">
                             <div>
-                                <button class="btn">Take Re-Test</button>
+                                <button class="btn" routerLink="/overall-history">See the Exam Details</button>
                             </div>
                         </div>
                     </div>
