--- a/src/app/exam/exam-details/exam-details.component.html
+++ b/src/app/exam/exam-details/exam-details.component.html
@@ -23,8 +23,6 @@
                           <div style="display: inline-block;" *ngIf="i === currentQuestion" class="font-sm-1 mb-1 comprehension-question"
                             [innerHtml]="questions[currentQuestion]?.question"></div>
                         </ng-container>
-                        <div *ngFor="let item of questions; let i = index">
-                        </div>
                       </div>
                     </div>
   
@@ -35,21 +33,20 @@
                           <li class="cursor-pointer mb-2 text-black" *ngFor="let option of questions[currentQuestion]?.options; let optionIndex = index">
                             <div class="d-flex">
                               <label class="labl">
-                                <input type="radio" name="option" id="{{ option['id'] }}" [disabled]="isQuestionSkipped()" />
-                                <div [ngClass]="{
-                                  'correct-answer': isCorrectAnswer(optionIndex) && !isQuestionSkipped(),
-                                  'selected-answer': getSelectedAnswer() === indexToLetter(optionIndex + 1) && !isCorrectAnswer(optionIndex) && !isQuestionSkipped(),
-                                  'skipped-answer': isQuestionSkipped()
-                                }">
+                                <input type="radio" name="option" id="{{ option['id'] }}"  disabled/>
+                               <div [ngClass]="(getSelectedAnswer() === indexToLetter(optionIndex) ? 'selected-answer' : '') + ' ' + (isCorrectAnswer(optionIndex) ? 'correct-answer' : '') + ' ' + (isInCorrect(optionIndex) ? 'incorrect-answer' : '')">
                                   <span class="font-weight-bold font-sm-1 optionNumbering">{{ indexToLetter(optionIndex) }}</span>
                                   <span class="ml-3 option-text font-sm-1" [innerHtml]="option"></span>
                                 </div>
+                                <!-- <div [ngClass]="(isCorrectAnswer(optionIndex) ? 'correct-answer' : '') + ' ' + (getSelectedAnswer() === indexToLetter(optionIndex + 1) ? 'selected-answer' : '')">
+                                  <span class="font-weight-bold font-sm-1 optionNumbering">{{ indexToLetter(optionIndex) }}</span>
+                                  <span class="ml-3 option-text font-sm-1" [innerHtml]="option"></span>
+                                </div> -->
                               </label>
                             </div>
                           </li>
                         </ul>
                       </div>
-                      
                     </div>
                   </div>
                 </div>
@@ -73,11 +70,6 @@
                         </a>
                       </div>
                     </div>
-                    <!-- <div>
-                      <button type="button" class="btn btn-sm btn-success" data-toggle="modal" data-target="#confirmationModal">
-                        Re-attempt Practice
-                      </button>
-                    </div> -->
                   </div>
                 </div>
               </div>
@@ -92,7 +84,10 @@
               <div class="row questionNumberHEight">
                 <div class="col-xl-15" *ngFor="let question of questions; let i = index" >
                   <div class="circleSection" (click)="jumpToQuestion(i)">
-                    <div class="circle" [ngClass]="{answeredQuestion: isQuestionAnswered(i),currentClass: i === currentQuestion}">
+                    <!-- <div class="circle" [ngClass]="{'answeredQuestion': isCorrect(i),'selected-answer: isInCorrect(i)}">
+                      {{ i + 1 }}'
+                    </div> -->
+                    <div class="circle"  [ngClass]="(isCorrect(i) ? 'answeredQuestion' : '') + ' ' + (isInCorrect(i) ? 'selected-answer2' : '')">
                       {{ i + 1 }}
                     </div>
                   </div>
@@ -129,33 +124,7 @@
               </div>
             </div>
           </div>
-          <!-- <div class="modal fade confirmationModalmsg" id="confirmationModal" tabindex="-1" role="dialog"      aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-              <div class="modal-content" style="border-radius: 16px; border: none">
-                <div class="modal-header" style="border: none">
-                  <h5 class="modal-title" id="confirmationModalLabel" style="font-size: 25px; font-weight: bold; color: #04607d; font-family: 'jaldi', sans-serif;" >
-                    Confirmation
-                  </h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                  <p class="text-center" style="color: #544f4f; font-size: 16px">
-                    Do you want to finish this practice?
-                  </p>
-                </div>
-                <div class="modal-footer" style="background-color: #00a3f1; border-radius: 0 0 16px 16px; justify-content: space-between;" >
-                  <button type="button" id="dimissModal" class="btn btn-sm btn-secondary" style="border-radius: 6px" data-dismiss="modal">
-                    Cancel
-                  </button>
-                  <button type="button" class="btn btn-sm text-white" style="background-color: #ff4935; border-radius: 6px" (click)="completeTest()" >
-                    Yes!
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div> -->
+         
         </div>
       </div>
     </div>
