Make the sideBar responsive like when sidebar is hide then other content will take the full width and add the icons on the sidebar

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,4 +1,4 @@
-<div class="disply-container1">
+<div class="displyy-container1">
     <div class="aboutUS">
         <div class="row">
             <div class="col-lg-12">
