--- a/src/app/exam/exam-overview/exam-overview.component.html
+++ b/src/app/exam/exam-overview/exam-overview.component.html
@@ -1,4 +1,4 @@
-<div class="disply-container">
+<div class="displyy-container">
     <div class="container mypath">
         <div class="row">
             <div class="col-md-12">
