--- a/src/app/exam/quize-report/quize-report.component.html
+++ b/src/app/exam/quize-report/quize-report.component.html
@@ -1,4 +1,4 @@
-<div class="disply-container" id="disply-container">
+<div class="displyy-container" id="disply-container">
     <div class="container practiceReport" id="printinvoice">
         <div class="row reportFirstRow">
             <div class="backToChapter">
