--- a/src/app/exam/report/report.component.html
+++ b/src/app/exam/report/report.component.html
@@ -1,4 +1,4 @@
-<div class="disply-container" id="disply-container">
+<div class="displyy-container" id="disply-container">
     <span class="alertMsg">Note- dont't leave these page before download your report card!</span>
     <div class="container practiceReport" id="printinvoice">
         <div class="row reportFirstRow">
