--- a/src/app/exam/subjects/subjects.component.html
+++ b/src/app/exam/subjects/subjects.component.html
@@ -1,4 +1,4 @@
-<div class="disply-container"> 
+<div class="displayy-container"> 
 <div class="container allExams">
     <div class="row topRow">
 
