--- a/src/app/exam/choose-p/choose-p.component.html
+++ b/src/app/exam/choose-p/choose-p.component.html
@@ -1,4 +1,4 @@
-<div class="disply-container">
+<div class="displyy-container">
     <div  class="pppp container">
         <div class="col-md-12">
             <h2 class="examTitle text-center">Class 1st CBSE Academics</h2>
