--- a/src/app/exam/mix-test-details/mix-test-details.component.html
+++ b/src/app/exam/mix-test-details/mix-test-details.component.html
@@ -1,4 +1,4 @@
-<div class="disply-container">
+<div class="displyy-container">
   <div class="container">
     <div class="row">
       <div class="col-md-12 mt-2">
