--- a/src/app/exam/start-exam/start-exam.component.html
+++ b/src/app/exam/start-exam/start-exam.component.html
@@ -1,4 +1,4 @@
-<div class="disply-container">
+<div class="displyy-container">
   <div class="practicePaperSecondSection mathjax" #mathjax>
     <div class="container">
       <div class="row practiceExamScreen">
