--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="display-container">
+<div class="display-containerr">
     <div class="footerWebsite">
         <div class="row footer">
             <div class="col-xl-3 col-lg-4 col-md-6" style="text-align: center;">
