--- a/src/app/exam/Admin/add-chapters/add-chapters.component.html
+++ b/src/app/exam/Admin/add-chapters/add-chapters.component.html
@@ -1,4 +1,4 @@
-<div class="disply-container">
+<div class="displyy-container">
     <div class="card">
       <div class="card-header">
         <h4>Add Chapter</h4>
