--- a/src/app/exam/Admin/add-questions/add-questions.component.html
+++ b/src/app/exam/Admin/add-questions/add-questions.component.html
@@ -1,5 +1,5 @@
 
-<div class="disply-container">
+<div class="displyy-container">
     <div class="card">
         <div class="card-header">
             <h4>Add Question</h4>
