--- a/src/app/exam/Admin/student-details/student-details.component.html
+++ b/src/app/exam/Admin/student-details/student-details.component.html
@@ -1,4 +1,4 @@
-<div class="disply-container">
+<div class="displyy-container">
     <!-- <p>student-details works!</p> -->
     <div class="studentDetails">
         <div class="heading">
@@ -51,6 +51,7 @@
                   <th>status</th> 
                   <th>Exam Time</th> 
                   <th>Spent Time</th> 
+                  <th>Date</th> 
                   <th>Details</th> 
                 </tr> 
               </thead> 
@@ -65,6 +66,7 @@
                   <td>PASS</td> 
                   <td>40 Min</td> 
                   <td>35 Min</td> 
+                  <td>2 Jan 2024</td>
                   <td><button class="btn btn-outline-primary">Details</button></td> 
                 </tr> 
                 <tr> 
@@ -77,6 +79,7 @@
                     <td>FAIL</td> 
                     <td>40 Min</td> 
                     <td>39 Min</td> 
+                    <td>20 Feb 2024</td> 
                     <td><button class="btn btn-outline-primary">Details</button></td> 
                   </tr> 
                   <tr> 
@@ -89,6 +92,7 @@
                     <td>PASS</td> 
                     <td>40 Min</td> 
                     <td>30 Min</td> 
+                    <td>18 march 2023</td> 
                     <td><button class="btn btn-outline-primary">Details</button></td> 
                   </tr> 
                   <!-- <tr> 
