--- a/src/app/exam/select-board/select-board.component.html
+++ b/src/app/exam/select-board/select-board.component.html
@@ -1,4 +1,4 @@
-<div class="disply-container">
+<div class="displyy-container">
     <div class="row d-flex" id="main-container">
         <div class="col-lg-8 col-md-6">
             <div class="row juorneyRow">
