--- a/src/app/exam/subjects/subjects.component.css
+++ b/src/app/exam/subjects/subjects.component.css
@@ -26,85 +26,33 @@ hr {
     cursor: pointer;
     transition: all .5s;
   }
-  
-  .allExams .topRow .card .imageDiv {
-    width: 70px;
-    height: 70px;
-    overflow: hidden;
-    display: flex;
-    margin-right: auto;
-    margin-left: auto;
-    justify-content: center;
-  }
-  
-  .allExams .topRow .card .imageDiv img {
-    max-width: 70px;
-    max-height: 70px;
-  }
-  
+    
   .allExams .topRow .card h5 {
     color: #483d8c;
     font-family: "jaldi";
     font-size: 25px;
-    padding-top: 15px;
+    /* padding-top: 50px;
     padding-left: 5px;
-    padding-right: 5px;
+    padding-right: 5px; */
     height: 54px;
     font-weight: bold;
-    display: -webkit-box;
+    /* display: -webkit-box;
     -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
+    -webkit-box-orient: vertical; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
     overflow: hidden;
     width: auto;
+    height: 150px;
+
+    text-align: center;
   }
   
   .allExams .topRow .card:hover {
     box-shadow: 0 0 5px #333;
   }
-  
-  .allExams .topRow .latestJobs h2 {
-    color: #141515;
-    margin-left: 13px;
-    font-family: 'jaldi';
-    font-size: 32px;
-  }
-  
-  .allExams .topRow .latestJobs .scrollSection {
-    height: 80vh;
-    overflow-y: scroll;
-  }
-  
-  .allExams .topRow .latestJobs ul {
-    margin-top: 15px;
-    margin-left: 17px;
-    margin-right: 5px;
-    list-style: none;
-  }
-  
-  .allExams .topRow .latestJobs li {
-    line-height: 1.1;
-    margin-top: 15px;
-    display: flex;
-  }
-  
-  .allExams .topRow .latestJobs li a {
-    font-family: "jaldi";
-    font-size: 16px;
-    font-weight: 500;
-    color: #141824;
-  }
-  
-  .allExams .topRow .latestJobs li a:hover {
-    color: #1B50A3;
-    text-decoration: underline;
-  }
-  
-  .allExams .topRow .latestJobs li .fa {
-    color: #007BBA;
-    font-size: 22px;
-    margin-right: 10px;
-  }
-  
+    
   @media screen and (max-width: 767px) {
     .allExams .topRow .card {
       margin-top: 20px;
