--- a/src/app/exam/subjects/subjects.component.html
+++ b/src/app/exam/subjects/subjects.component.html
@@ -10,6 +10,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6" style="width: 300px;">
                     <div class="card" (click)="selectCourse(subject.id, subject.name)">
                         <h5 class="text-center">{{subject.name | uppercase}}</h5>
+                        <!-- <h6>{{subject.description}}</h6> -->
                     </div>
                 </div>
             </ng-container>
