--- a/src/app/exam/Admin/add-questions/add-questions.component.css
+++ b/src/app/exam/Admin/add-questions/add-questions.component.css
@@ -1,3 +1,16 @@
+
 .card-header{
     background: #7386d5;
+}
+.container{
+    margin: 100px auto;
+}
+.card-body{
+    background: rgb(228, 228, 228);
+}
+.controller2{
+    margin: 15px 0px;
+}
+.indicator{
+    color: gray;
 }
