--- a/src/app/exam/Admin/add-questions/add-questions.component.html
+++ b/src/app/exam/Admin/add-questions/add-questions.component.html
@@ -1,8 +1,9 @@
 
 <div class="displyy-container">
-    <div class="card">
+    <div class="container">
+         <div class="card">
         <div class="card-header">
-            <h4>Add Question</h4>
+            <h4 style="text-align: center;">Add Question</h4>
         </div>
         <div class="card-body">
             <div class="form-body">
@@ -59,32 +60,54 @@
                         </div>
                         <div class="planeQuestionSection">
                         <div class="row">
-                          <div class="controller">
+                          <div class="controller2">
                                 <label for="enterQuestion"><h6>Enter Question-</h6></label>
                                 <textarea name="question" id="enterQuestion"  style="display: block;" class="form-control" formControlName="enterQuestion" placeholder="Enter the question here!">
                                 </textarea>
+                                <a href="javascript:void(0)" style="float: right; cursor: pointer;" (click)="AddQuetionImg()">Add Image ?</a>
+                                <label class="indicator" for="questionImage" *ngIf="questionImg" >Select image Question</label>
+                                <input class="form-control m-2" type="file" name="questionImage" accept="image/*" (change)="onQuestionImageChange($event)" formControlName="questionImage" *ngIf="questionImg">
                             </div>
-                            <div class="controller  col-md-6">
+                            <div class="controller2  col-md-6">
                                 <label for="optiona"><h6>Option A-</h6></label>
                                 <input type="text" name="optiona" id="" class="form-control" formControlName="optiona" (input)="updateOptions()">
+                                <a href="javascript:void(0)" style="float: right; cursor: pointer;" (click)="AddOptionAImg()">Add Image ?</a>
+                                <label class="indicator" for="optionAImage" *ngIf="optionImgA">Select image for optionA</label>
+                                <input class="form-control m-2" type="file" name="optionAImage" accept="image/*" (change)="onOptionImageChangeA('optiona', $event)" formControlName="imagea" (input)="updateOptions()" *ngIf="optionImgA">
                             </div>
-                            <div class="controller col-md-6">
+                            <div class="controller2 col-md-6">
                                 <label for="optionb"><h6>Option B-</h6></label>
                                 <input type="text" name="optionb" id="" class="form-control" formControlName="optionb" (input)="updateOptions()">
+                                <a href="javascript:void(0)" style="float: right; cursor: pointer;" (click)="AddOptionBImg()">Add Image ?</a>
+                                <label class="indicator" for="questionImage" *ngIf="optionImgB" >Select image for optionB</label>
+                                <input class="form-control m-2" type="file" name="optionAImage" accept="image/*" (change)="onOptionImageChangeB('optionb', $event)" formControlName="imageb" (input)="updateOptions()" *ngIf="optionImgB">
                             </div>
-                            <div class="controller col-md-6">
+                            <div class="controller2 col-md-6">
                                 <label for="optionc"><h6>Option C-</h6></label>
                                 <input type="text" name="optionc" id="" class="form-control" formControlName="optionc" (input)="updateOptions()">
+                                <a href="javascript:void(0)" style="float: right; cursor: pointer;" (click)="AddOptionCImg()">Add Image ?</a>
+                                <label class="indicator" for="questionImage" *ngIf="optionImgC" >Select image for optionC</label>
+                                <input class="form-control m-2" type="file" name="optionAImage" accept="image/*" (change)="onOptionImageChangeC('optionc', $event)" formControlName="imagec" (input)="updateOptions()" *ngIf="optionImgC">
                             </div>
-                            <div class="controller col-md-6">
+                            <div class="controller2 col-md-6">
                                 <label for="optiond"><h6>Option D-</h6></label>
                                 <input type="text" name="optiond" id="" class="form-control" formControlName="optiond" (input)="updateOptions()">
+                                <a href="javascript:void(0)" style="float: right; cursor: pointer;" (click)="AddOptionDImg()">Add Image ?</a>
+                                <label class="indicator" for="questionImage" *ngIf="optionImgD" >Select image for optionD</label>
+                                <input class="form-control m-2" type="file" name="optionAImage" accept="image/*" (change)="onOptionImageChangeD('optiond', $event)" formControlName="imaged" (input)="updateOptions()" *ngIf="optionImgD">
                             </div>
-                            <div class="controller col-md-6">
+                            <div class="controller2 col-md-6">
                                 <label for="correctAns">Select Correct Answer</label>
                                 <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example" formControlName="correctAns">
                                     <option selected>Select Answer</option>
                                     <option *ngFor="let option of options; let i = index;" [value]="option">{{ option }}</option>
+                                </select>
+                            </div>
+                            <div class="controller2 col-md-6">
+                                <label for="diff_level">Select Difficulty level</label>
+                                <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example" formControlName="diff_level" (change)="selectedDiff_level($event)">
+                                    <option value="0" selected>Easy</option>
+                                    <option value="1" >HARD</option>
                                 </select>
                             </div>
                         </div>
@@ -134,5 +157,7 @@
             </div>
         </div>
     </div>
+    </div>
+   
 </div>
 
