--- a/src/app/exam/exam-details/exam-details.component.css
+++ b/src/app/exam/exam-details/exam-details.component.css
@@ -514,3 +514,14 @@
 /* .incorrect-answer{
   background-color: red !important;
 } */
+
+.highchartsStyle {
+  width: 100%; /* Adjust width as needed */
+  height: 300px; /* Adjust height as needed */
+  /* margin: auto; */
+}
+#chart {
+  /* max-width: 850px; */
+width: 100%;
+height: 100%;
+}
