--- a/src/app/exam/exam-details/exam-details.component.html
+++ b/src/app/exam/exam-details/exam-details.component.html
@@ -105,7 +105,8 @@
                 <div class="col-xl-12">
                   <div class="separtaor"></div>
                 </div>
-                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+
+                <!-- <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
                   <div class="circleSection">
                     <div class="circle" id="currentQuestion">
                       {{ currentQuestion + 1 }}
@@ -128,17 +129,16 @@
                     </div>
                     <h2>Answered</h2>
                   </div>
-                </div>
+                </div> -->
+
+                <div id="chart"></div>
+
               </div>
             </div>
           </div>
          
         </div>
       </div>
-    </div>
-
-
-    
-
+    </div>    
   </div>
   
