--- a/src/app/exam/quize-report/quize-report.component.css
+++ b/src/app/exam/quize-report/quize-report.component.css
@@ -313,3 +313,27 @@
   .backToChapter{
     text-align: left;
   }
+
+
+  .practiceReportContainer {
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+    text-align: center; 
+  }
+  
+  .reportDetails {
+    display: flex;
+    flex-direction: row; 
+    align-items: center; 
+    margin-top: 20px; 
+    
+  }
+  
+  .reportCard {
+    margin-right: 20px;
+    margin-bottom: 10px; 
+  }
+  .spanContent{
+    color: #ffcc03;
+  }
