--- a/src/app/exam/quize-report/quize-report.component.html
+++ b/src/app/exam/quize-report/quize-report.component.html
@@ -6,11 +6,14 @@
                     Download Report</a>&nbsp;
             </div>
         </div>
-        <h2 class="practiceReportHeading">Practice Report Card</h2>
-        <h5 style="display: inline-block;">Subjet- {{quiz_pool_name}}</h5> 
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <h5 style="display: inline-block;">Date- {{quize_date}}</h5>
+        <div class="practiceReportContainer">
+            <h2 class="practiceReportHeading">Practice Report Card</h2>
+            <div class="reportDetails">
+              <h5 class="reportCard">Subject - <span class="spanContent">{{quiz_pool_name}}</span> </h5>
+              <h5 class="reportCard">Date - <span class="spanContent">{{quize_date}}</span> </h5>
+              <h5 class="reportCard">Attempt Number - <span class="spanContent">2</span> </h5>
+            </div>
+          </div>
         <div>
             <hr>
         </div>
@@ -19,7 +22,6 @@
                 <div class="d-flex justify-content-center" style="height: 270px;" *ngIf="showGraph">
                     <highcharts-chart [Highcharts]="highcharts" [options]="chartOptions" class="highchartsStyle">
                     </highcharts-chart>
-
                 </div>
             </div>
             <div class="col-md-12">
@@ -95,6 +97,28 @@
                 </div>
             </div>
         </div>
+        <!-- try to add the attempt history and last attemp details. -->
+
+        <!-- <div class="col-xl-12 col-lg-12 col-md-12">
+            <div class="card topCard">
+              <div class="row">
+                <span>Current Attempt Number- 4</span>
+                <br>
+                <span>
+                    <h3>Previous  3 Attempts-</h3>
+                </span>
+                <div class="lastAttempts row" *ngIf="!attemptNumber">
+                  <span>Attempt - 1    <button>See Details</button></span>
+                  <span>Attempt - 2    <button>See Details</button></span>
+                  <span>Attempt - 3    <button>See Details</button></span>
+                </div>
+                <span *ngIf="attemptNumber">
+                  <p style="color: red;">These is your first Attempt</p>
+                </span>
+              </div>
+            </div>
+          </div> -->
+
         <div class="row">
             <div class="col-md-12">
                 <div class="card lastCard">
@@ -109,11 +133,11 @@
                                       You Need To Practice More!</h2>
                             </div>
                             <div>
-                                <p *ngIf="resultPrediction >= 85">You are excellent in <b>{{ resultPrediction }}%</b> chapter. Well done, keep it up!
+                                <p *ngIf="resultPrediction >= 85">You are excellent in <b>{{quiz_pool_name}}</b> with <b>{{ resultPrediction }}%</b> . Well done, keep it up!
                                 </p>
-                                <p *ngIf="resultPrediction >= 60 && resultPrediction <= 84">You are Good in <b>{{ resultPrediction }}%</b> chapter. Well done, keep it up!
+                                <p *ngIf="resultPrediction >= 60 && resultPrediction <= 84">You are Good in <b>{{ quiz_pool_name }}</b>  with <b>{{ resultPrediction }}%</b>. Well done, keep it up!
                                 </p>
-                                <p *ngIf="average">You are doing good enough in {{resultPrediction}}% chapter. But you need more
+                                <p *ngIf="average">You are doing good enough in <b>{{ quiz_pool_name }}</b> with  {{resultPrediction}}% . But you need more
                                     practice.
                                 </p>
                                 <p *ngIf="resultPrediction <= 40">Its Seem You have not study well these time, Try to do better next Time. BETTER LUCK NEXT TIME :)
@@ -122,7 +146,7 @@
                         </div>
                         <div class="col-xl-4 col-lg-12">
                             <div>
-                                <button class="btn">Take Re-Test</button>
+                                <button class="btn" routerLink="/overall-history">Check History</button>
                             </div>
                         </div>
                     </div>
