--- a/src/app/exam/report/report.component.css
+++ b/src/app/exam/report/report.component.css
@@ -53,22 +53,7 @@
     font-family: "jaldi", sans-serif;
   }
   
-  /* .practiceReport .totalUser {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap-reverse;
-  } */
-  
-  /* .practiceReport .totalUser .btn {
-    font-family: "jaldi", Sans-serif;
-    font-size: 14px;
-    font-weight: 700;
-    text-transform: uppercase;
-    color: #1B50A3;
-    padding: 0;
-    margin: 0;
-  } */
-  
+
   .practiceReport hr {
     display: block;
     height: 1px;
@@ -312,4 +297,26 @@
   }
   .backToChapter{
     text-align: left;
+  }
+  .practiceReportContainer {
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+    text-align: center; 
+  }
+  
+  .reportDetails {
+    display: flex;
+    flex-direction: row; 
+    align-items: center; 
+    margin-top: 20px; 
+    
+  }
+  
+  .reportCard {
+    margin-right: 20px;
+    margin-bottom: 10px; 
+  }
+  .spanContent{
+    color: #ffcc03;
   }
