Add the interceptor for authentication and add the option to uplaod the images for admin

--- a/src/app/exam/choose-p/choose-p.component.html
+++ b/src/app/exam/choose-p/choose-p.component.html
@@ -3,7 +3,7 @@
         <div class="col-md-12">
             <h2 class="examTitle text-center">Class 1st CBSE Academics</h2>
             <div class="totalUser">
-                <div><span>Total Users : 5445</span></div>
+                <!-- <div><span>Total Users : 5445</span></div> -->
             </div>
         </div>
         <hr>
@@ -20,7 +20,8 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-6 nopadding" data-aos="fade-right" data-aos-duration="2000">
                         <div class="card">
-                            <h3 class="text-center">Make My <span>PRACTICE</span></h3>
+                            <h3 class="text-center">Start the <span>TEST</span></h3>
+                            <!-- <h3 class="text-center">Make My <span>PRACTICE</span></h3> -->
                             <div class="imageDiv"><img src="assets/img/practice.svg" alt=""></div>
                             <button  class="btn" routerLink="/subjects">start practice</button>
                         </div>
@@ -28,7 +29,8 @@
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6 nopadding" data-aos="fade-left" data-aos-duration="2000">
                         <div class="card">
-                            <h3 class="text-center">Make My <span>PATH</span></h3>
+                            <h3 class="text-center">Group <span>TEST</span></h3>
+                            <!-- <h3 class="text-center">Make My <span>PATH</span></h3> -->
                             <div class="imageDiv"><img src="assets/img/path.svg" alt=""></div>
                             <button disabled class="btn" style="color: red;">Coming Soon...</button>
                         </div>
