--- a/src/app/home-content/home-content.component.html
+++ b/src/app/home-content/home-content.component.html
@@ -97,7 +97,7 @@
     <div class="col-md-11">
         <div class="row prepAllCards">
             <div class="col-xl-4 col-lg-6 mb-3" data-aos="zoom-in" data-aos-duration="2000">
-                <a href="javascript:void(0)">
+                <a class="anchorTag" href="javascript:void(0)" >
                     <div class="card h-100">
                         <!-- <ng-container *ngFor="let category of examCategories">
                             <a *ngIf="category?.title == 'K-12'"
@@ -126,7 +126,7 @@
                 </a>
             </div>
             <div class="col-xl-4 col-lg-6 mb-3" data-aos="zoom-in" data-aos-duration="2000">
-                <a href="javascript:void(0)">
+                <a class="anchorTag" href="javascript:void(0)">
                     <div class="card h-100">
                         <p>Absolute study provides a platform to let students know all the career opportunities possible. We
                             aim to give you all important information about the exams, practice tests and detailed
@@ -149,7 +149,7 @@
                 </a>
             </div>
             <div class="col-xl-4 col-lg-6 mb-3" data-aos="zoom-in" data-aos-duration="2000">
-                <a href="javascript:void(0)">
+                <a class="anchorTag" href="javascript:void(0)">
                     <div class="card h-100">
 
                         <ng-container *ngFor="let category of examCategories">
