--- a/src/app/exam/exam-overview/exam-overview.component.html
+++ b/src/app/exam/exam-overview/exam-overview.component.html
@@ -8,7 +8,7 @@
                         <i class="fas fa-angle-double-left mr-1"></i>Dashboard
                     </button>
                     <div>
-                        <span>Total Users : </span>
+                        <!-- <span>Total Users : </span> -->
                     </div>
                 </div>
             </div>
