--- a/src/app/exam/quize-report/quize-report.component.css
+++ b/src/app/exam/quize-report/quize-report.component.css
@@ -41,34 +41,22 @@
   }
 }
 .practiceReport {
-    padding: 5vh 0vh;
+    padding: 2vh 0vh;
   }
   
   .practiceReport .overallAccuracy {
     font-size: 20px;
     font-weight: 600;
-    margin: 0 0 20px;
+    /* margin: 0 0 20px; */
     color: #333;
     line-height: 1.4;
     font-family: "jaldi", sans-serif;
+    margin-right: 85px !important;
   }
-  
-  /* .practiceReport .totalUser {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap-reverse;
-  } */
-  
-  /* .practiceReport .totalUser .btn {
-    font-family: "jaldi", Sans-serif;
-    font-size: 14px;
-    font-weight: 700;
-    text-transform: uppercase;
-    color: #1B50A3;
-    padding: 0;
-    margin: 0;
-  } */
-  
+    
+  .answer__heading{
+    margin-right: 85px  !important;
+  }
   .practiceReport hr {
     display: block;
     height: 1px;
@@ -134,9 +122,9 @@
   }
   
   .practiceReport .practiceReportHeading {
-    font-size: 50px;
+    font-size: 45px;
     font-weight: 700;
-    line-height: 1.4;
+    line-height: 0.4;
     font-family: "jaldi", sans-serif;
     text-align: center;
   }
@@ -176,7 +164,7 @@
   
   .practiceReport .topCard .col-md-6 h5 {
     color: #333333;
-    font-size: 48px;
+    font-size: 40px;
     font-weight: 700;
     margin-bottom: 12px;
     font-family: "jaldi", sans-serif;
@@ -329,6 +317,13 @@
     margin-top: 20px; 
     
   }
+  .reportDetails2 {
+    display: flex;
+    flex-direction: row; 
+    align-items: center; 
+    /* margin-top: 20px;  */
+    
+  }
   
   .reportCard {
     margin-right: 20px;
@@ -336,4 +331,10 @@
   }
   .spanContent{
     color: #ffcc03;
+  }
+  .apexcharts-legend{
+    display: none !important;
+  } 
+  .topCard .timeBox{
+    height: 115px !important;
   }
