--- a/src/app/exam/quize-report/quize-report.component.html
+++ b/src/app/exam/quize-report/quize-report.component.html
@@ -11,7 +11,16 @@
             <div class="reportDetails">
               <h5 class="reportCard">Subject - <span class="spanContent">{{quiz_pool_name}}</span> </h5>
               <h5 class="reportCard">Date - <span class="spanContent">{{quize_date}}</span> </h5>
-              <h5 class="reportCard">Attempt Number - <span class="spanContent">2</span> </h5>
+              
+            </div>
+            <div class="reportDetails2">
+                <h5 class="reportCard">Attempt Number - <span class="spanContent">{{quizeAttemptNumber}}</span> </h5>
+                <h5 class="reportCard">Check Previous report - 
+                  <select name="" id="" (change)="data($event)">Select Attempt Number
+                      <!-- <option selected>select Attempt</option> -->
+                      <option *ngFor="let attempts of attempDropdown" [value]="attempts.id">{{attempts.position}}</option>
+                  </select>
+                </h5>
             </div>
           </div>
         <div>
@@ -19,24 +28,43 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <div class="d-flex justify-content-center" style="height: 270px;" *ngIf="showGraph">
-                    <highcharts-chart [Highcharts]="highcharts" [options]="chartOptions" class="highchartsStyle">
-                    </highcharts-chart>
+                <div class="d-flex justify-content-center" >
+                    <div id="chart"></div>
+                </div>
+            </div>
+            <div class="col-md-12">
+                <div class="">
+                    <h2 class="answer__heading"><b>{{correctAnswer}}/{{totalQuestion}}</b></h2>
+                </div>
+                <div class="">
+                    <h2 class="overallAccuracy">Correct</h2>
+                </div>
+            </div>
+        </div>
+        <!-- <div class="row">
+            <div class="col-md-12">
+                <div class="d-flex justify-content-center" >
+                    <div id="chart"></div>
                 </div>
             </div>
             <div class="col-md-12">
                 <div class="d-flex justify-content-center">
-                    <h2><b>{{totalMarks}}/{{totalQuestion}}</b></h2>
+                    <h2><b>{{correctAnswer}}/{{totalQuestion}}</b></h2>
                 </div><br>
                 <div class="d-flex justify-content-center">
                     <h2 class="overallAccuracy">Correct</h2>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-4">
                 <div class="card topCard">
                     <div class="row">
+                        <div class="col-md-6">
+                            <div *ngIf="showGraph">
+                                <div id="chart2"></div>
+                            </div>
+                        </div>
                         <div class="col-md-6">
                             <div>
                                 <h5>{{unattempts}}/{{totalQuestion}}</h5>
@@ -45,19 +73,18 @@
                                 <h6>Skipped</h6>
                             </div>
                         </div>
-                        <div class="col-md-6">
-                            <div *ngIf="showGraph">
-                                <highcharts-chart [Highcharts]="highcharts" [options]="chartOptionsb"
-                                    class="highchartsStyleSecond">
-                                </highcharts-chart>
-                            </div>
-                        </div>
+                       
                     </div>
                 </div>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4">
                 <div class="card topCard">
                     <div class="row">
+                        <div class="col-md-6">
+                            <div *ngIf="showGraph">
+                                <div id="chart3"></div>
+                            </div>
+                        </div>
                         <div class="col-md-6">
                             <div>
                                 <h5>{{wrongAnswer}}/{{totalQuestion}}</h5>
@@ -66,19 +93,13 @@
                                 <h6>Incorrect</h6>
                             </div>
                         </div>
-                        <div class="col-md-6">
-                            <div *ngIf="showGraph">
-                                <highcharts-chart [Highcharts]="highcharts" [options]="chartOptionsc"
-                                    class="highchartsStyleSecond">
-                                </highcharts-chart>
-                            </div>
-                        </div>
+
                     </div>
                 </div>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4">
                 <div class="card topCard">
-                    <div class="row">
+                    <div class="row timeBox">
                         <div class="col-md-6">
                             <div>
                                 you have take the 
@@ -97,27 +118,6 @@
                 </div>
             </div>
         </div>
-        <!-- try to add the attempt history and last attemp details. -->
-
-        <!-- <div class="col-xl-12 col-lg-12 col-md-12">
-            <div class="card topCard">
-              <div class="row">
-                <span>Current Attempt Number- 4</span>
-                <br>
-                <span>
-                    <h3>Previous  3 Attempts-</h3>
-                </span>
-                <div class="lastAttempts row" *ngIf="!attemptNumber">
-                  <span>Attempt - 1    <button>See Details</button></span>
-                  <span>Attempt - 2    <button>See Details</button></span>
-                  <span>Attempt - 3    <button>See Details</button></span>
-                </div>
-                <span *ngIf="attemptNumber">
-                  <p style="color: red;">These is your first Attempt</p>
-                </span>
-              </div>
-            </div>
-          </div> -->
 
         <div class="row">
             <div class="col-md-12">
@@ -125,22 +125,22 @@
                     <div class="row">
                         <div class="col-xl-8 col-lg-12">
                             <div>
-                                <h2 *ngIf="resultPrediction >= 85"><span>Excellent!</span> Well done! Keep it Up!.</h2>
-                                <h2 *ngIf="resultPrediction >= 60 && resultPrediction <= 84"><span style="color: orange;">Going Good!</span> Keep Practicing.
+                                <h2 *ngIf="correctAnswer >= 85"><span>Excellent!</span> Well done! Keep it Up!.</h2>
+                                <h2 *ngIf="correctAnswer >= 60 && correctAnswer <= 84"><span style="color: orange;">Going Good!</span> Keep Practicing.
                                 </h2>
-                                <h2 *ngIf="resultPrediction <= 40"><span style="color: orangered;">Oops!</span> You didn't perform well this time. You need to Practice more.</h2>
-                                <h2 *ngIf="resultPrediction >= 41 && resultPrediction <=59"><span style="color: blue;">Hmm!</span>
+                                <h2 *ngIf="correctAnswer <= 40"><span style="color: orangered;">Oops!</span> You didn't perform well this time. You need to Practice more.</h2>
+                                <h2 *ngIf="correctAnswer >= 41 && correctAnswer <=59"><span style="color: blue;">Hmm!</span>
                                       You Need To Practice More!</h2>
                             </div>
                             <div>
-                                <p *ngIf="resultPrediction >= 85">You are excellent in <b>{{quiz_pool_name}}</b> with <b>{{ resultPrediction }}%</b> . Well done, keep it up!
+                                <p *ngIf="correctAnswer >= 85">You are excellent in <b>{{quiz_pool_name}}</b> with <b>{{ correctAnswer }}%</b> . Well done, keep it up!
                                 </p>
-                                <p *ngIf="resultPrediction >= 60 && resultPrediction <= 84">You are Good in <b>{{ quiz_pool_name }}</b>  with <b>{{ resultPrediction }}%</b>. Well done, keep it up!
+                                <p *ngIf="correctAnswer >= 60 && correctAnswer <= 84">You are Good in <b>{{ quiz_pool_name }}</b>  with <b>{{ correctAnswer }}%</b>. Well done, keep it up!
                                 </p>
                                 <p *ngIf="average">You are doing good enough in <b>{{ quiz_pool_name }}</b> with  {{resultPrediction}}% . But you need more
                                     practice.
                                 </p>
-                                <p *ngIf="resultPrediction <= 40">Its Seem You have not study well these time, Try to do better next Time. BETTER LUCK NEXT TIME :)
+                                <p *ngIf="correctAnswer <= 40">Its Seem You have not study well these time, Try to do better next Time. BETTER LUCK NEXT TIME :)
                                 </p>
                             </div>
                         </div>
@@ -156,3 +156,7 @@
     </div>
 
 </div>
+
+
+
+
