--- a/src/app/exam/exam-overview/exam-overview.component.html
+++ b/src/app/exam/exam-overview/exam-overview.component.html
@@ -8,7 +8,6 @@
                         <i class="fas fa-angle-double-left mr-1"></i>Dashboard
                     </button>
                     <div>
-                        <!-- <span>Total Users : </span> -->
                     </div>
                 </div>
             </div>
@@ -44,7 +43,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="buttonsGroup">
+                <!-- <div class="buttonsGroup">
                     <div>
                         <button class="btn" disabled>Best Books Suggested</button>
                     </div>
@@ -54,7 +53,7 @@
                     <div>
                         <button class="btn" disabled>Previous Year Papers</button>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
